--- a/style.css
+++ b/style.css
@@ -156,8 +156,8 @@ ul {
 }
 
 .card {
-    width: 190px;
-    height: 254px;
+    width: 180px;
+    height: 275px;
     border-radius: 1em;
     padding: 1.9rem;
     background: #f5f5f5;
@@ -198,6 +198,9 @@ ul {
     width: 100%;
     border-radius: 1em;
     border: 2px solid black;
+}
+.card-info .text-title .text-body{
+    font-size: 0.1em;
 }
 
 .text-title {
@@ -315,3 +318,937 @@ ul {
     text-decoration: none;
     padding-left: 0;
 }
+@media (min-width: 1024px) {
+    
+    #cardapio {
+        padding: 0 2%;
+      }
+    
+      #lojas {
+        padding: 0 2%;
+      }
+    
+      #lojas h2 {
+        padding: 2% 0 0 0;
+      }
+    
+      #lojas article {
+        display: inline-block;
+        padding: 0 8% 2%;
+      }
+    
+      #blog {
+        padding: 0 2%;
+      }
+    
+      .cardapio {
+        width: 130px;
+        height: 205px;
+        display: inline-block;
+        background: #861119;
+        border-radius: 0.4em;
+        box-shadow: 0.3em 0.3em 0.7em #00000015;
+        transition: border 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        border: white 0.2em solid;
+      }
+    
+      .cardapio img {
+        width: 130px;
+      height: 205px;
+        border-radius: 0.4em;
+      }
+    
+      .cardapio:hover {
+        border: #000000 0.2em solid;
+      }
+    
+    
+    
+    .card {
+      width: 118px;
+      height: 323px;
+      border-radius: 1em;
+      padding: 1.9rem;
+      background: #f5f5f5;
+      position: relative;
+      display: flex;
+      align-content: flex-end;
+      transition: 0.4s ease-out;
+      box-shadow: 0px 7px 20px rgba(43, 8, 37, 0.2);
+    }
+    
+    .card:before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 100%;
+      /* background: rgba(238, 116, 116, 0.4); */
+      z-index: 2;
+      transition: 0.5s;
+      border-radius: 1em;
+    }
+    
+    .card-info {
+      position: relative;
+      z-index: 3;
+      color: #861119;
+      padding-left: 5px;
+      background-color: white;
+      border: 1px solid white;
+      border-radius: 1em;
+      opacity: 1;
+      transform: translateY(20%);
+      transition: 0.5s;
+    }
+    
+    .card-info img {
+      width: 100%;
+      border-radius: 1em;
+      border: 2px solid black;
+    }
+    
+    .text-title {
+      font-size: 1.5rem;
+      font-weight: 500;
+    }
+    
+    .text-title .text-body {
+      padding-left: 10px;
+    }
+    
+    .text-body {
+      letter-spacing: 1px;
+      font-size: 0.9rem;
+      margin: 5px 0 15px 0;
+    }
+    
+    .card-button {
+      padding: 0.6rem;
+      outline: none;
+      border: none;
+      position: absolute;
+      bottom: 5%;
+      border-radius: 4px;
+      background: #861119;
+      color: white;
+      font-weight: bold;
+      transition: 0.4s ease;
+    
+    }
+    
+    .card-img {
+      width: 100%;
+      height: 100%;
+      border-radius: 1em;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: white;
+      background: linear-gradient(to bottom, #e7aeae, #ee9ca7);
+    }
+    
+    .card-img img {
+      width: 100%;
+      height: 50%;
+      border-radius: 1em;
+    }
+    
+    .card:hover {
+      transform: translateY(5%);
+    }
+    
+    .card:hover:before {
+      opacity: 1;
+    }
+    
+    .card:hover .card-info {
+      opacity: 1;
+      transform: translateY(0);
+    }
+    
+    .card-button:hover {
+      background: rgba(218, 77, 77, 0.4);
+      color: #f5f5f5;
+    }
+  }
+@media (min-width: 1280px) {
+    
+    #cardapio {
+        padding: 0 2%;
+      }
+    
+      #lojas {
+        padding: 0 2%;
+      }
+    
+      #lojas h2 {
+        padding: 2% 0 0 0;
+      }
+    
+      #lojas article {
+        display: inline-block;
+        padding: 0 8% 2%;
+      }
+    
+      #blog {
+        padding: 0 2%;
+      }
+    
+      .cardapio {
+        width: 170px;
+      height: 245px;
+        display: inline-block;
+        background: #861119;
+        border-radius: 0.4em;
+        box-shadow: 0.3em 0.3em 0.7em #00000015;
+        transition: border 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        border: white 0.2em solid;
+      }
+    
+      .cardapio img {
+        width: 170px;
+      height: 245px;
+        border-radius: 0.4em;
+      }
+    
+      .cardapio:hover {
+        border: #000000 0.2em solid;
+      }
+    
+    
+    
+    .card {
+      width: 165px;
+      height: 269px;
+      border-radius: 1em;
+      padding: 1.9rem;
+      background: #f5f5f5;
+      position: relative;
+      display: flex;
+      align-content: flex-end;
+      transition: 0.4s ease-out;
+      box-shadow: 0px 7px 20px rgba(43, 8, 37, 0.2);
+    }
+    
+    .card:before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 100%;
+      /* background: rgba(238, 116, 116, 0.4); */
+      z-index: 2;
+      transition: 0.5s;
+      border-radius: 1em;
+    }
+    
+    .card-info {
+      position: relative;
+      z-index: 3;
+      color: #861119;
+      padding-left: 5px;
+      background-color: white;
+      border: 1px solid white;
+      border-radius: 1em;
+      opacity: 1;
+      transform: translateY(20%);
+      transition: 0.5s;
+    }
+    
+    .card-info img {
+      width: 100%;
+      border-radius: 1em;
+      border: 2px solid black;
+    }
+    
+    .text-title {
+      font-size: 1.5rem;
+      font-weight: 500;
+    }
+    
+    .text-title .text-body {
+      padding-left: 10px;
+    }
+    
+    .text-body {
+      letter-spacing: 1px;
+      font-size: 0.9rem;
+      margin: 5px 0 15px 0;
+    }
+    
+    .card-button {
+      padding: 0.6rem;
+      outline: none;
+      border: none;
+      position: absolute;
+      bottom: 5%;
+      border-radius: 4px;
+      background: #861119;
+      color: white;
+      font-weight: bold;
+      transition: 0.4s ease;
+    
+    }
+    
+    .card-img {
+      width: 100%;
+      height: 100%;
+      border-radius: 1em;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: white;
+      background: linear-gradient(to bottom, #e7aeae, #ee9ca7);
+    }
+    
+    .card-img img {
+      width: 100%;
+      height: 50%;
+      border-radius: 1em;
+    }
+    
+    .card:hover {
+      transform: translateY(5%);
+    }
+    
+    .card:hover:before {
+      opacity: 1;
+    }
+    
+    .card:hover .card-info {
+      opacity: 1;
+      transform: translateY(0);
+    }
+    
+    .card-button:hover {
+      background: rgba(218, 77, 77, 0.4);
+      color: #f5f5f5;
+    }
+  }
+@media (min-width: 1366px){
+
+    #cardapio {
+      padding: 0 2%;
+    }
+  
+    #lojas {
+      padding: 0 2%;
+    }
+  
+    #lojas h2 {
+      padding: 2% 0 0 0;
+    }
+  
+    #lojas article {
+      display: inline-block;
+      padding: 0 8% 2%;
+    }
+  
+    #blog {
+      padding: 0 2%;
+    }
+  
+    .cardapio {
+      width: 170px;
+      height: 245px;
+      display: inline-block;
+      background: #861119;
+      border-radius: 0.4em;
+      box-shadow: 0.3em 0.3em 0.7em #00000015;
+      transition: border 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      border: white 0.2em solid;
+    }
+  
+    .cardapio img {
+      width: 170px;
+      height: 245px;
+      border-radius: 0.4em;
+    }
+  
+    .cardapio:hover {
+      border: #000000 0.2em solid;
+    }
+  
+  
+  
+  .card {
+    width: 185px;
+    height: 256px;
+    border-radius: 1em;
+    padding: 1.9rem;
+    background: #f5f5f5;
+    position: relative;
+    display: flex;
+    align-content: flex-end;
+    transition: 0.4s ease-out;
+    box-shadow: 0px 7px 20px rgba(43, 8, 37, 0.2);
+  }
+  
+  .card:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    /* background: rgba(238, 116, 116, 0.4); */
+    z-index: 2;
+    transition: 0.5s;
+    border-radius: 1em;
+  }
+  
+  .card-info {
+    position: relative;
+    z-index: 3;
+    color: #861119;
+    padding-left: 5px;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 1em;
+    opacity: 1;
+    transform: translateY(20%);
+    transition: 0.5s;
+  }
+  
+  .card-info img {
+    width: 100%;
+    border-radius: 1em;
+    border: 2px solid black;
+  }
+  
+  .text-title {
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+  
+  .text-title .text-body {
+    padding-left: 10px;
+  }
+  
+  .text-body {
+    letter-spacing: 1px;
+    font-size: 0.9rem;
+    margin: 5px 0 15px 0;
+  }
+  
+  .card-button {
+    padding: 0.6rem;
+    outline: none;
+    border: none;
+    position: absolute;
+    bottom: 5%;
+    border-radius: 4px;
+    background: #861119;
+    color: white;
+    font-weight: bold;
+    transition: 0.4s ease;
+  
+  }
+  
+  .card-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 1em;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: white;
+    background: linear-gradient(to bottom, #e7aeae, #ee9ca7);
+  }
+  
+  .card-img img {
+    width: 100%;
+    height: 50%;
+    border-radius: 1em;
+  }
+  
+  .card:hover {
+    transform: translateY(5%);
+  }
+  
+  .card:hover:before {
+    opacity: 1;
+  }
+  
+  .card:hover .card-info {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  
+  .card-button:hover {
+    background: rgba(218, 77, 77, 0.4);
+    color: #f5f5f5;
+  }
+}
+  @media (min-width: 1440px) {
+    #cardapio {
+        padding: 0 2%;
+    }
+
+    #lojas {
+        padding: 0 2%;
+    }
+
+    #lojas h2 {
+        padding: 2% 0 0 0;
+    }
+
+    #lojas article {
+        display: inline-block;
+        padding: 0 8% 2%;
+    }
+
+    #blog {
+        padding: 0 2%;
+    }
+
+    .cardapio {
+        width: 191px;
+        height: 255px;
+        display: inline-block;
+        background: #861119;
+        border-radius: 0.4em;
+        box-shadow: 0.3em 0.3em 0.7em #00000015;
+        transition: border 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        border: white 0.2em solid;
+    }
+
+    .cardapio img {
+        width: 191px;
+        height: 255px;
+        border-radius: 0.4em;
+    }
+
+    .cardapio:hover {
+        border: #000000 0.2em solid;
+    }
+
+
+
+    .card {
+        width: 199px;
+        height: 260px;
+        border-radius: 1em;
+        padding: 1.9rem;
+        background: #f5f5f5;
+        position: relative;
+        display: flex;
+        align-content: flex-end;
+        transition: 0.4s ease-out;
+        box-shadow: 0px 7px 20px rgba(43, 8, 37, 0.2);
+    }
+
+    .card:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        /* background: rgba(238, 116, 116, 0.4); */
+        z-index: 2;
+        transition: 0.5s;
+        border-radius: 1em;
+    }
+
+    .card-info {
+        position: relative;
+        z-index: 3;
+        color: #861119;
+        padding-left: 5px;
+        background-color: white;
+        border: 1px solid white;
+        border-radius: 1em;
+        opacity: 1;
+        transform: translateY(20%);
+        transition: 0.5s;
+    }
+
+    .card-info img {
+        width: 100%;
+        border-radius: 1em;
+        border: 2px solid black;
+    }
+
+    .text-title {
+        font-size: 1.5rem;
+        font-weight: 500;
+    }
+
+    .text-title .text-body {
+        padding-left: 10px;
+    }
+
+    .text-body {
+        letter-spacing: 1px;
+        font-size: 0.9rem;
+        margin: 5px 0 15px 0;
+    }
+
+    .card-button {
+        padding: 0.6rem;
+        outline: none;
+        border: none;
+        position: absolute;
+        bottom: 5%;
+        border-radius: 4px;
+        background: #861119;
+        color: white;
+        font-weight: bold;
+        transition: 0.4s ease;
+
+    }
+
+    .card-img {
+        width: 100%;
+        height: 100%;
+        border-radius: 1em;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: white;
+        background: linear-gradient(to bottom, #e7aeae, #ee9ca7);
+    }
+
+    .card-img img {
+        width: 100%;
+        height: 50%;
+        border-radius: 1em;
+    }
+
+    .card:hover {
+        transform: translateY(5%);
+    }
+
+    .card:hover:before {
+        opacity: 1;
+    }
+
+    .card:hover .card-info {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    .card-button:hover {
+        background: rgba(218, 77, 77, 0.4);
+        color: #f5f5f5;
+    }
+}
+  @media (min-width: 1600px) {
+    #cardapio {
+      padding: 0 2%;
+    }
+  
+    #lojas {
+      padding: 0 2%;
+    }
+  
+    #lojas h2 {
+      padding: 2% 0 0 0;
+    }
+  
+    #lojas article {
+      display: inline-block;
+      padding: 0 8% 2%;
+    }
+  
+    #blog {
+      padding: 0 2%;
+    }
+  
+    .cardapio {
+      width: 221px;
+      height: 285px;
+      display: inline-block;
+      background: #861119;
+      border-radius: 0.4em;
+      box-shadow: 0.3em 0.3em 0.7em #00000015;
+      transition: border 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      border: white 0.2em solid;
+    }
+  
+    .cardapio img {
+       width: 221px;
+      height: 285px;
+      border-radius: 0.4em;
+    }
+  
+    .cardapio:hover {
+      border: #000000 0.2em solid;
+    }
+  
+  
+  
+  .card {
+    width: 230px;
+    height: 294px;
+    border-radius: 1em;
+    padding: 1.9rem;
+    background: #f5f5f5;
+    position: relative;
+    display: flex;
+    align-content: flex-end;
+    transition: 0.4s ease-out;
+    box-shadow: 0px 7px 20px rgba(43, 8, 37, 0.2);
+  }
+  
+  .card:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    /* background: rgba(238, 116, 116, 0.4); */
+    z-index: 2;
+    transition: 0.5s;
+    border-radius: 1em;
+  }
+  
+  .card-info {
+    position: relative;
+    z-index: 3;
+    color: #861119;
+    padding-left: 5px;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 1em;
+    opacity: 1;
+    transform: translateY(20%);
+    transition: 0.5s;
+  }
+  
+  .card-info img {
+    width: 100%;
+    border-radius: 1em;
+    border: 2px solid black;
+  }
+  
+  .text-title {
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+  
+  .text-title .text-body {
+    padding-left: 10px;
+  }
+  
+  .text-body {
+    letter-spacing: 1px;
+    font-size: 0.9rem;
+    margin: 5px 0 15px 0;
+  }
+  
+  .card-button {
+    padding: 0.6rem;
+    outline: none;
+    border: none;
+    position: absolute;
+    bottom: 5%;
+    border-radius: 4px;
+    background: #861119;
+    color: white;
+    font-weight: bold;
+    transition: 0.4s ease;
+  
+  }
+  
+  .card-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 1em;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: white;
+    background: linear-gradient(to bottom, #e7aeae, #ee9ca7);
+  }
+  
+  .card-img img {
+    width: 100%;
+    height: 50%;
+    border-radius: 1em;
+  }
+  
+  .card:hover {
+    transform: translateY(5%);
+  }
+  
+  .card:hover:before {
+    opacity: 1;
+  }
+  
+  .card:hover .card-info {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  
+  .card-button:hover {
+    background: rgba(218, 77, 77, 0.4);
+    color: #f5f5f5;
+  }
+  }
+  @media (min-width: 1920px) {
+  
+    #cardapio {
+      padding: 0 2%;
+    }
+  
+    #lojas {
+      padding: 0 2%;
+    }
+  
+    #lojas h2 {
+      padding: 2% 0 0 0;
+    }
+  
+    #lojas article {
+      display: inline-block;
+      padding: 0 8% 2%;
+    }
+  
+    #blog {
+      padding: 0 2%;
+    }
+  
+    .cardapio {
+      width: 271px;
+      height: 335px;
+      display: inline-block;
+      background: #861119;
+      border-radius: 0.4em;
+      box-shadow: 0.3em 0.3em 0.7em #00000015;
+      transition: border 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      border: white 0.2em solid;
+    }
+  
+    .cardapio img {
+      width: 270px;
+      height: 334px;
+      border-radius: 0.4em;
+    }
+  
+    .cardapio:hover {
+      border: #000000 0.2em solid;
+    }
+  
+  
+  
+  .card {
+    width: 290px;
+    height: 354px;
+    border-radius: 1em;
+    padding: 1.9rem;
+    background: #f5f5f5;
+    position: relative;
+    display: flex;
+    align-content: flex-end;
+    transition: 0.4s ease-out;
+    box-shadow: 0px 7px 20px rgba(43, 8, 37, 0.2);
+  }
+  
+  .card:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    /* background: rgba(238, 116, 116, 0.4); */
+    z-index: 2;
+    transition: 0.5s;
+    border-radius: 1em;
+  }
+  
+  .card-info {
+    position: relative;
+    z-index: 3;
+    color: #861119;
+    padding-left: 5px;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 1em;
+    opacity: 1;
+    transform: translateY(20%);
+    transition: 0.5s;
+  }
+  
+  .card-info img {
+    width: 100%;
+    border-radius: 1em;
+    border: 2px solid black;
+  }
+  
+  .text-title {
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+  
+  .text-title .text-body {
+    padding-left: 10px;
+  }
+  
+  .text-body {
+    letter-spacing: 1px;
+    font-size: 0.9rem;
+    margin: 5px 0 15px 0;
+  }
+  
+  .card-button {
+    padding: 0.6rem;
+    outline: none;
+    border: none;
+    position: absolute;
+    bottom: 5%;
+    border-radius: 4px;
+    background: #861119;
+    color: white;
+    font-weight: bold;
+    transition: 0.4s ease;
+  
+  }
+  
+  .card-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 1em;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: white;
+    background: linear-gradient(to bottom, #e7aeae, #ee9ca7);
+  }
+  
+  .card-img img {
+    width: 100%;
+    height: 50%;
+    border-radius: 1em;
+  }
+  
+  .card:hover {
+    transform: translateY(5%);
+  }
+  
+  .card:hover:before {
+    opacity: 1;
+  }
+  
+  .card:hover .card-info {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  
+  .card-button:hover {
+    background: rgba(218, 77, 77, 0.4);
+    color: #f5f5f5;
+  }
+  }
